[project]
name = "anti-bot-bypass-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nirav Joshi", email = "niravjoshi3000@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
