[project]
name = "anti-bot-bypass-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nirav Joshi", email = "niravjoshi3000@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.116.1", "pydantic-settings>=2.10.1", "playwright>=1.54.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "fastapi dev app/main.py"
